# bookstore

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: admin.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/: factories.py  test_factories.py
order/tests/test_serializer/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: factories.py  test_factories.py
product/tests/tests_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/tests_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
